--- a/.github/workflows/update-changelog.yaml
+++ b/.github/workflows/update-changelog.yaml
@@ -8,7 +8,7 @@ on:
 
 jobs:
     changelog:
-        uses: nyaomaru/changelog-bot/.github/workflows/changelog.yaml@main
+        uses: nyaomaru/changelog-bot/.github/workflows/changelog.yaml@v0
         with:
             changelog_path: CHANGELOG.md
             provider: openai
