--- a/.github/workflows/update-changelog.yaml
+++ b/.github/workflows/update-changelog.yaml
@@ -1,20 +1,24 @@
 name: Auto Changelog
 
 on:
-    workflow_dispatch:
-    push:
-        tags:
-            - "v*"
+  workflow_dispatch:
+  push:
+    tags:
+      - 'v*'
+
+permissions:
+  contents: write
+  pull-requests: write
 
 jobs:
-    changelog:
-        uses: nyaomaru/changelog-bot/.github/workflows/changelog.yaml@v0
-        with:
-            changelog_path: CHANGELOG.md
-            provider: openai
-            release_tag: ${{ github.ref_name }}
-            release_name: ${{ github.ref_name }}
-            dry_run: "false"
-        secrets:
-            REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+  changelog:
+    uses: nyaomaru/changelog-bot/.github/workflows/changelog.yaml@v0
+    with:
+      changelog_path: CHANGELOG.md
+      provider: openai
+      release_tag: ${{ github.ref_name }}
+      release_name: ${{ github.ref_name }}
+      dry_run: 'false'
+    secrets:
+      REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
