fix: permission error

--- a/.github/workflows/update-changelog.yaml
+++ b/.github/workflows/update-changelog.yaml
@@ -8,6 +8,9 @@ on:
 
 jobs:
     changelog:
+        permissions:
+            contents: write
+            pull-requests: write
         uses: nyaomaru/changelog-bot/.github/workflows/changelog.yaml@v0
         with:
             changelog_path: CHANGELOG.md
