--- a/lefthook.yml
+++ b/lefthook.yml
@@ -2,7 +2,10 @@
 # https://lefthook.dev/configuration/
 
 pre-commit:
-  parallel: true
+  parallel: false
   jobs:
+    - run: pnpm prettier --write {staged_files}
+      glob: '*.{js,jsx,ts,tsx,json,md,yml,yaml}'
+      stage_fixed: true
     - run: pnpm eslint {staged_files}
-      glob: '*.{js,ts,jsx,tsx}'
+      glob: '*.{js,jsx,ts,tsx}'
